# MoneyLaundering

./: README.md  adjacency_matrix.npz  anomalies_attempt.ipynb  anomaly_results.csv  attempt_2.ipynb  data_database.ipynb  data_generation.ipynb  entities.csv  hello.py  kuzu_db  new_attempt.ipynb  predictions.csv  pyproject.toml  transactions.csv
a_data/: data_generation.ipynb  synthetic_data.ipynb  synthetic_transactions.csv
a_graph/: graph_it.ipynb  synthetic_transactions.csv  temp_transactions.csv
db/: graph_db
hide/: entities.csv  first_attempt.ipynb  generate_data.ipynb  transactions.csv
