[project]
name = "aml-solution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.4.2",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "kuzu>=0.11.1",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "notebook>=7.4.4",
    "numpy>=2.3.2",
    "ollama>=0.5.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "torch>=2.7.1",
]
